Updated going forth passage in MA.

--- a/01_agama/madhyama/MA_074.md
+++ b/01_agama/madhyama/MA_074.md
@@ -100,7 +100,7 @@ next: MA_075.html
 
 #### Aniruddha
 
-28\. “Monks, the monk Aniruddha had accomplished these eight thoughts of a great man. Afterward, he spent a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lived alone in seclusion, his mind wasn’t careless, and he cultivated diligence. After living there alone in seclusion, not being careless, and cultivating diligence, he made himself a son of the clan. He shaved off his beard and hair, put on reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+28\. “Monks, the monk Aniruddha had accomplished these eight thoughts of a great man. Afterward, he spent a summer retreat in Cedi at Waterside Grove. With this teaching of mine, he lived alone in seclusion, his mind wasn’t careless, and he cultivated diligence. After living there alone in seclusion, not being careless, and cultivating diligence, he made himself a son of the clan. He shaved off his hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness.
 {: #p28}
 
 29\. “Only when the unsurpassed religious practice is finished will he accomplish and dwell in their own knowledge, awakening, and direct experience. He’ll truly know: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’”
