--- a/01_agama/madhyama/MA_076.md
+++ b/01_agama/madhyama/MA_076.md
@@ -14,7 +14,7 @@ next: MA_077.html
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Buddha traveled to [Ugracelā] and stayed on the shore of Gaṅgā Lake.
 {: #p1}
 
-2\. It was then that a monk rose from sitting in reflection in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit to one side. He said, “Bhagavān, please teach me the essentials of the Dharma. After hearing the teaching from the Bhagavān, I’ll live alone in seclusion, my mind won’t be careless, and I’ll cultivate diligence. As a result of living alone in seclusion, not being careless, and cultivating diligence, I’ll become a clansman who shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. When the unsurpassed religious practice is finished, then I’ll accomplish and dwell in my own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’”
+2\. It was then that a monk rose from sitting in reflection in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet, withdrew to sit to one side. He said, “Bhagavān, please teach me the essentials of the Dharma. After hearing the teaching from the Bhagavān, I’ll live alone in seclusion, my mind won’t be careless, and I’ll cultivate diligence. As a result of living alone in seclusion, not being careless, and cultivating diligence, I’ll become a clansman who shaves off his hair and beard, puts on the reddish-brown robes, becomes a believer, and leaves home to train on the path in homelessness. When the unsurpassed religious practice is finished, then I’ll accomplish and dwell in my own knowledge, perception, and realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’”
 {: #p2}
 
 3\. The Bhagavān told him, “Monk, you should thus train: ‘Let my mind abide in an inner and unperturbed cultivation of measureless goodness.’ Again, contemplate the inner body as body, applying the utmost diligence. Establishing right mindfulness and right knowledge, well steer your own mind; make it free of greed and without grief.
@@ -89,7 +89,7 @@ next: MA_077.html
 26\. “Monk, if you cultivate these <em>samādhi</em>s of utmost goodness, you’ll surely attain one of two fruits. You might attain ultimate knowledge in the present life, or you might instead become a non-returner with some remainder.”
 {: #p26}
 
-27\. Hearing what the Buddha taught, that monk well accepted and well retained it. He then rose from his seat, bowed his head at the Buddha’s feet, circled him three times, and left. Having accepted and retained the Buddha’s instructions, he went to live alone in seclusion, his mind wasn’t careless, and he cultivated diligence. As a result of living alone in seclusion, not being careless, and cultivating diligence, he became a clansman. He shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+27\. Hearing what the Buddha taught, that monk well accepted and well retained it. He then rose from his seat, bowed his head at the Buddha’s feet, circled him three times, and left. Having accepted and retained the Buddha’s instructions, he went to live alone in seclusion, his mind wasn’t careless, and he cultivated diligence. As a result of living alone in seclusion, not being careless, and cultivating diligence, he became a clansman. He shaved off his hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness.
 {: #p27}
 
 28\. It was only when the unsurpassed religious practice was finished that he accomplished and dwelt in his own knowledge, awakening, and direct experience. He truly knew: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I will not again be subject to existence.’ After knowing the Dharma, that venerable became an <em>arhat</em>.
