--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -32,7 +32,7 @@ Again, the monks were quiet and didn’t answer three times.
 
 Venerable Aniruddha said, “So it is, Bhagavān. We are happy with this right Dharma and with cultivating the religious life.”
 
-6\. The Bhagavān asked, “Aniruddha, you are youths, young men with pure black hair and physical vigor. You enjoyed traveling, enjoyed frequent baths, and you adorned and cherished yourselves. You lamented and cried with loved ones, your relatives, close friends, and parents, who didn’t want you to leave home to train on the path. Afterward, you shaved off your beards and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
+6\. The Bhagavān asked, “Aniruddha, you are youths, young men with pure black hair and physical vigor. You enjoyed traveling, enjoyed frequent baths, and you adorned and cherished yourselves. You lamented and cried with loved ones, your relatives, close friends, and parents, who didn’t want you to leave home to train on the path. Afterward, you shaved off their hair and beards, put on the reddish-brown robes, became believers, and left home to train on the path in homelessness.
 {: #p6}
 
 7\. “Aniruddha, it wasn’t out of fear of the king that you went to train on the path. It wasn’t out of fear of bandits, debts, worries, poverty, or the inability to make a living that you went to train on the path. You’ve simply had enough of birth, old age, illness, death, lamentation, and misery. You might also want to find the limit of that great mass of suffering. Aniruddha, was it not because of such a thought that all of you left home to train on the path?”
