--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -64,10 +64,10 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 13\. Venerable Aniruddha then addressed the monks, “Good men, before I had left home to train on the path, I had grown tired of birth, old age, illness, death, lamentation, heartache, sorrow, and grief. I wanted to put an end to this great mass of suffering.
 {: #p13}
 
-14\. “Good men, once I was tired of that, I contemplated, ‘A home becomes cramped, a place of dust and toil; leaving home and training on the path reveals a clear expanse. Now, I’m confined at home, and I’m confining. I’m not able to fully live and cultivate the religious life. Wouldn’t it be better to discard this small or large amount of wealth and these few or many friends and family? I’ll shave my beard and hair, put on the reddish-brown robes, become faithful, leave home, go homeless, and train on the path.’
+14\. “Good men, once I was tired of that, I contemplated, ‘A home becomes cramped, a place of dust and toil; leaving home and training on the path reveals a clear expanse. Now, I’m confined at home, and I’m confining. I’m not able to fully live and cultivate the religious life. Wouldn’t it be better to discard this small or large amount of wealth and these few or many friends and family? I’ll shave off my hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness.’
 {: #p14}
 
-15\. “Good men, afterwards, I discarded my small or large amount of wealth and few or many friends and family. I shaved my beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Good men, after leaving home to train on the path and discarding my family, I accepted the monk’s training, cultivated the precepts, and guarded myself from acting freely. Moreover, I well attended to my behavior and the rules of propriety. Seeing the smallest misdeeds and constantly fearing them, I upheld the training and precepts.
+15\. “Good men, afterwards, I discarded my small or large amount of wealth and few or many friends and family. I shaved off my hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Good men, after leaving home to train on the path and discarding my family, I accepted the monk’s training, cultivated the precepts, and guarded myself from acting freely. Moreover, I well attended to my behavior and the rules of propriety. Seeing the smallest misdeeds and constantly fearing them, I upheld the training and precepts.
 {: #p15}
 
 #### The Twenty Renunciations
@@ -239,7 +239,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 68\. The Bhagavān then recovered from his ailment and became well again. He got up and sat crossed-legged. After sitting crossed-legged, the Bhagavān praised Venerable Aniruddha, “Good, Aniruddha, good! It’s outstanding, Aniruddha, how you’ve taught the principle of the rough cloth for the monks. Aniruddha, you’ve again taught the principle of the rough cloth for the monks. Aniruddha, many times have you taught the principle of the rough cloth for the monks.”
 {: #p68}
 
-69\. The Bhagavān then addressed the monks, “Monks, you all have received the principle of the rough cloth. Recite often the principle of the rough cloth, and well retain the principle of the rough cloth. What’s the reason for that? The principle of the rough cloth and the Dharma are associated. It’s the root of the religious life; it leads to penetration, to awakening, and to nirvāṇa. If a clansmen shaves his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path, then he ought to bring to mind and accept the principle of the rough cloth and accept and retain well the principle of the rough cloth. What’s the reason for that?
+69\. The Bhagavān then addressed the monks, “Monks, you all have received the principle of the rough cloth. Recite often the principle of the rough cloth, and well retain the principle of the rough cloth. What’s the reason for that? The principle of the rough cloth and the Dharma are associated. It’s the root of the religious life; it leads to penetration, to awakening, and to nirvāṇa. If a clansmen shaves off his hair and beard, puts on the reddish-brown robes, becomes a believer, and leaves home to train on the path in homelessness, then he ought to bring to mind and accept the principle of the rough cloth and accept and retain well the principle of the rough cloth. What’s the reason for that?
 {: #p69}
 
 70\. “I do not see a time in the past when monks made such robes as they have for the monk Aniruddha. I do not see future or present monks making such robes as they have for the monk Aniruddha. What’s the reason for that? Here on this Salaḷa Peak, 800 monks have gathered with the Bhagavān to make robes for the monk Aniruddha. Such a monk as Aniruddha possesses great supernormal abilities, great majesty, great fortune, and great might.”
