--- a/01_agama/madhyama/MA_092.md
+++ b/01_agama/madhyama/MA_092.md
@@ -55,7 +55,7 @@ next: MA_095.html
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a11'>爾時，世尊告諸比丘： 「汝等當共受此『青白蓮花喻經』，誦習，守持。 所以者何？ 此『青白蓮華喻經』如法有義。 是梵行本，致通，致覺，亦致涅槃。 若族姓子剃除鬚髮，著袈裟衣，至信，捨家，無家，學道者，應當受此『青白蓮花喻經』，善諷，誦持。」</td>
-    <td id='p11'>11. The Bhagavān then told the monks, “All of you should together accept this <em>Analogy of the Blue and White Lotus Flowers Sūtra</em>, recite it, and preserve it. Why is that? This <em>Analogy of the Blue and White Lotus Flowers Sūtra</em> has a meaning that accords with the Dharma. As the origin of the religious life, it brings about penetration, awakening, and <em>nirvāṇa</em>. If a clansman cuts off his hair and beard, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path, he should accept this <em>Analogy of the Blue and White Lotus Flowers Sūtra</em>, recite it, and preserve it well.”</td>
+    <td id='p11'>11. The Bhagavān then told the monks, “All of you should together accept this <em>Analogy of the Blue and White Lotus Flowers Sūtra</em>, recite it, and preserve it. Why is that? This <em>Analogy of the Blue and White Lotus Flowers Sūtra</em> has a meaning that accords with the Dharma. As the origin of the religious life, it brings about penetration, awakening, and <em>nirvāṇa</em>. If a clansman shaves off his hair and beard, puts on the reddish-brown robes, becomes a believer, and leaves home to train on the path in homelessness, he should accept this <em>Analogy of the Blue and White Lotus Flowers Sūtra</em>, recite it, and preserve it well.”</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.575a16'>佛說如是。 尊者阿難及諸比丘聞佛所說歡喜，奉行。</td>
@@ -98,6 +98,6 @@ Compare this passage with the conclusion of SN 22.94: “Suppose there was a blu
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 17 July 2024</p>
+<p class='revised'>Last Revised: 15 October 2024</p>
 
 <hr/>
