--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -71,10 +71,10 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 
 #### Going Forth
 
-18\. “After they have faith in the Tathāgata’s correct teaching and discipline, they think, ‘A home becomes cramped, a place of dust and toil; leaving home and training on the path reveals a clear expanse. Now, I’m confined at home, and I’m confining. I’m not able to fully live and cultivate the religious life. Wouldn’t it be better to discard this small or large amount of wealth and these few or many friends and family? I’ll shave my beard and hair, put on the reddish-brown robes, become faithful, leave home, go homeless, and train on the path.’
+18\. “After they have faith in the Tathāgata’s correct teaching and discipline, they think, ‘A home becomes cramped, a place of dust and toil; leaving home and training on the path reveals a clear expanse. Now, I’m confined at home, and I’m confining. I’m not able to fully live and cultivate the religious life. Wouldn’t it be better to discard this small or large amount of wealth and these few or many friends and family? I’ll shave off my hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness.’
 {:#p18}
 
-19\. “Sometime later, he discards his small or large amount of wealth and few or many friends and family. He shaves his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. After leaving home and discarding his family, he accepts the monk’s training, cultivates the precepts, and guards himself from acting freely. Moreover, he well attends to his behavior and the rules of propriety. Seeing the smallest misdeeds and constantly fearing them, he upholds the training and precepts.
+19\. “Sometime later, he discards his small or large amount of wealth and few or many friends and family. He shaves off his hair and beard, puts on the reddish-brown robes, becomes a believer, and leaves home to train on the path in homelessness. After leaving home and discarding his family, he accepts the monk’s training, cultivates the precepts, and guards himself from acting freely. Moreover, he well attends to his behavior and the rules of propriety. Seeing the smallest misdeeds and constantly fearing them, he upholds the training and precepts.
 {:#p19}
 
 #### The Twenty Renunciations
