--- a/01_agama/madhyama/MA_153.md
+++ b/01_agama/madhyama/MA_153.md
@@ -22,7 +22,7 @@ next: MA_159.html
 3\. Just then, the heretic Sugandika[\[3\]](#n3){: #ref3} was out wandering in the afternoon, and he went to Bhāradvāja’s most quiet abode, too. Sugandika saw from a distance that there was a straw seat spread out at Bhāradvāja’s most quiet abode where someone had lain on their side like a lion, an ascetic, or a religious practitioner. After seeing that, Sugandika asked, “Who’s straw seat is this here at Bhāradvāja’s most quiet abode? They have lain there on their side like a lion, an ascetic, or a religious practitioner.”
 {:#p3}
 
-4\. The priest Bharadvāja replied, “Sugandika, it’s the ascetic Gautama of the Śākyans, who renounced his Śākya clan, cut off his hair and beard, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. He awakened to the unsurpassed, correct, and complete awakening. It’s his straw seat here at our most quiet abode where someone had lain on their side like a lion, an ascetic, or a religious practitioner.”
+4\. The priest Bharadvāja replied, “Sugandika, it’s the ascetic Gautama of the Śākyans, who renounced his Śākya clan, shaved off his hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. He awakened to the unsurpassed, correct, and complete awakening. It’s his straw seat here at our most quiet abode where someone had lain on their side like a lion, an ascetic, or a religious practitioner.”
 {:#p4}
 
 5\. Sugandika said, “Bharadvāja, I see what can’t be seen, and I hear what can’t be heard. That is, I see where that ascetic Gautama has lain. Why is that? That ascetic Gautama has destroyed the ground.[\[4\]](#n4){: #ref4} Someone who destroys the ground is of no use.”
@@ -62,7 +62,7 @@ Sugandika answered, “Yes, Gautama.”
 
 #### Ordinary Desires
 
-14\. The Bhagavān asked him, “Sugandika, what do you think? Suppose that someone has yet to leave home and train on the path. Their eye recognizes forms that are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon those forms that their eye recognizes. They cut off their hair and beard, put on the reddish-brown robes, become faithful, leave home, go homeless, and train on the path. Truly seeing the formation, cessation, enjoyment, danger, and escape of forms that their eye recognizes, they wander with an inner calm.[\[5\]](#n5){: #ref5}
+14\. The Bhagavān asked him, “Sugandika, what do you think? Suppose that someone has yet to leave home and train on the path. Their eye recognizes forms that are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon those forms that their eye recognizes. They shave off their hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, danger, and escape of forms that their eye recognizes, they wander with an inner calm.[\[5\]](#n5){: #ref5}
 {:#p14}
 
 15\. “Suppose they see another person who has yet to part with desire for forms. They’re eaten by the craving for forms and burned by a fever for forms. Their eye recognizes forms that are lovely, wished for, and associated with what’s desirable. When they see this person pursuing [forms], they don’t praise that, nor are they delighted by that.[\[6\]](#n6){: #ref6}
@@ -73,7 +73,7 @@ Sugandika answered, “Yes, Gautama.”
 
 He replied, “No, Gautama.”
 
-17\. “Sugandika, what do you think? Suppose someone has yet to leave home and train on the path. Thus, their ear recognizes sounds … their nose recognizes smells … their tongue recognizes flavors … their body recognizes touches that are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon touches that their body recognizes. They cut off their hair and beard, put on the reddish-brown robes, become faithful, leave home, go homeless, and train on the path. Truly seeing the formation, cessation, enjoyment, danger, and escape of touches that their body recognizes, they live with an inner calm.
+17\. “Sugandika, what do you think? Suppose someone has yet to leave home and train on the path. Thus, their ear recognizes sounds … their nose recognizes smells … their tongue recognizes flavors … their body recognizes touches that are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon touches that their body recognizes. They shave off their hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, danger, and escape of touches that their body recognizes, they live with an inner calm.
 {:#p17}
 
 18\. “Suppose they see another person who has yet to part with desire for touches. They’re eaten by the craving for touches and burned by a fever for touches. Their body recognizes touches that are lovely, wished for, and associated with what’s desirable. When they see this person pursuing [touches], they don’t praise that, nor are they delighted by that.
@@ -86,7 +86,7 @@ He replied, “No, Gautama.”
 
 #### The Five Merits of Desire
 
-20\. “Sugandika, what do you think? Suppose someone has yet to leave home and train on the path. The five merits of desire[\[7\]](#n7){: #ref7} are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon those five merits of desire. They cut off their hair and beard, put on the reddish-brown robes, become faithful, leave home, go homeless, and train on the path. Truly seeing the formation, cessation, enjoyment, danger, and escape of the five merits of desire, they live with an inner calm.
+20\. “Sugandika, what do you think? Suppose someone has yet to leave home and train on the path. The five merits of desire[\[7\]](#n7){: #ref7} are lovely, wished for, and associated with what’s desirable. Sometime later, they abandon those five merits of desire. They shave off their hair and beard, put on the reddish-brown robes, become a believer, and leave home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, danger, and escape of the five merits of desire, they live with an inner calm.
 {:#p20}
 
 21\. “Suppose they see another person who has yet to part with desire. They’re eaten by the craving for desires and burned by a fever for desires. The five merits of desire are lovely, wished for, and associated with what’s desirable. When they see this person pursuing [desires], they don’t praise that, nor are they delighted by that.
@@ -97,7 +97,7 @@ He replied, “No, Gautama.”
 
 He replied, “No, Gautama.”
 
-23\. “Sugandika, before I left home and trained on the path, I could get the five merits of desire easily, not with difficulty. They were lovely, wished for, and associated with what’s desirable. Sometime later, I abandoned the five merits of desire. I cut off my hair and beard, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Truly seeing the formation, cessation, enjoyment, danger, and escape of the five merits of desire, I lived with an inner calm.
+23\. “Sugandika, before I left home and trained on the path, I could get the five merits of desire easily, not with difficulty. They were lovely, wished for, and associated with what’s desirable. Sometime later, I abandoned the five merits of desire. I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, danger, and escape of the five merits of desire, I lived with an inner calm.
 {:#p23}
 
 24\. “I saw another person who had yet to part with desire. They were eaten by the craving for desires and burned by a fever for desires. The five merits of desire were lovely, wished for, and associated with what’s desirable. When I saw this person pursuing [desires], I didn’t praise that, nor was I delighted by that.
@@ -119,7 +119,7 @@ He answered, “No, Gautama.”
 28\. “He answered, “No, Gautama. Why would that be? Human desires are a foul place that’s impure. It would be detestable, unapproachable, horrible, and very painful to his mind. Gautama, the desires in Heaven are so much higher, more marvelous and superior, than human desires. It would never happen that this god or son of a god would abandon the five merits of desire up in Heaven or rejoice when remembering his enjoyment of human desires.”
 {:#p28}
 
-29\. “So it is, Sugandika. I ended human desires and went beyond the desires in Heaven. I cut off my hair and beard, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Truly seeing the formation, cessation, enjoyment, trouble, and escape of the five merits of desire, I lived with an inner calm.
+29\. “So it is, Sugandika. I ended human desires and went beyond the desires in Heaven. I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. Truly seeing the formation, cessation, enjoyment, trouble, and escape of the five merits of desire, I lived with an inner calm.
 {:#p29}
 
 30\. “I saw another person who had yet to part with desire. They were eaten by the craving for desires and burned by a fever for desires. The five merits of desire were lovely, wished for, and associated with what’s desirable. When I saw this person pursuing [desires], I didn’t praise that, nor was I delighted by that.
@@ -309,7 +309,7 @@ Interestingly, though, the same term occurs in MN 75 in the later context of bei
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 January 2023
+Last Revised: 15 October 2024
 {: .revised}
 
 ---
