--- a/01_agama/madhyama/MA_204.md
+++ b/01_agama/madhyama/MA_204.md
@@ -73,7 +73,7 @@ The monks then replied, “Very well, we will accept the teaching and listen.”
 
 #### Training Under Ārāḍa Kālāma
 
-17\. “When I was a young man, I had pure blue-black hair and flourished from year to year until I was 29. That period was my happiest and most fun. I was handsome, decked out, and traveled about. Back then, my father and mother cried and my friends were unhappy when I shaved off my hair and beard, put on the reddish-brown robes, became faithful, renounced home, went homeless, and trained on the path. I guarded myself physically and my livelihood was pure. I guarded my words and thoughts, and my livelihood was pure.
+17\. “When I was a young man, I had pure blue-black hair and flourished from year to year until I was 29. That period was my happiest and most fun. I was handsome, decked out, and traveled about. Back then, my father and mother cried and my friends were unhappy when I shaved off their hair and beard, put on the reddish-brown robes, became a believer, and left home to train on the path in homelessness. I guarded myself physically and my livelihood was pure. I guarded my words and thoughts, and my livelihood was pure.
 {:#p17}
 
 18\. After I had accomplished this body of precepts, I wanted to pursue the unsurpassed safety of <em>nirvāṇa</em> that lacks illness and the unsurpassed safety of <em>nirvāṇa</em> that lacks old age, lacks death, grief and sorrow, and defilement. I therefore went to Ārāḍa Kālāma and asked him, “Ārāḍa, I want to practice the religious life under you. May I do so?”
