Fixed crazy find-replace error in EA, added to note in SA 3.5

--- a/01_agama/ekottarika/09/EA_09_05.md
+++ b/01_agama/ekottarika/09/EA_09_05.md
@@ -40,7 +40,7 @@ Because of their mind’s defiled conduct.
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel to [AN 1.43](https://www.suttacentral.net/an1.43){:target="_blank"} and [Iti 20](https://www.suttacentral.net/iti20){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is parallel to [AN 1.43](https://www.suttacentral.net/an1.43){:target="_blank"} and [Iti 20](https://www.suttacentral.net/iti20){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2} *Hell*. C. 泥㴝 or 泥犂 (MC. nei-lei = G. *nara[ga]*), P/S. *naraka*. The Chinese transliterates the Indic word that was equivalent to English “Hell” as a place of punishment in the afterlife. *Naraka* literally means a pit, so a literal translation to English could be “the Pit.” The next occurrence of “Hell,” however, translates the Indic name to Chinese as 地獄 (lit. “earth prison”). [\[back\]](#ref2)
 
 ---
