--- a/01_agama/ekottarika/09/EA_09_06.md
+++ b/01_agama/ekottarika/09/EA_09_06.md
@@ -40,7 +40,7 @@ Because of their mind’s good conduct.
 
 ### Notes
 
-1. {:#n1} This sūtra is similar to [AN 1.44](https://www.suttacentral.net/an1.44){:target="_target"} and [Iti 21](https://www.suttacentral.net/iti21){:target="_blank"}. It’s closer to Iti 21 in format, and the concluding are also very similar to the Iti version, but this sūtra adds a conclusion that was standard for EĀ. AN 1.44 includes only the prose portion of the sūtra. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.44" target="_target">AN 1.44</a> and <a href="https://www.suttacentral.net/iti21" target="_blank">Iti 21</a>. It’s closer to Iti 21 in format, and the concluding are also very similar to the Iti version, but this <em>sūtra</em> adds a conclusion that was standard for EĀ. AN 1.44 includes only the prose portion of the <em>sūtra</em>. [\[back\]](#ref1)
 
 ---
 
