--- a/01_agama/ekottarika/09/EA_09_09.md
+++ b/01_agama/ekottarika/09/EA_09_09.md
@@ -30,9 +30,9 @@ next: EA_09_10.html
 
 ### Notes
 
-1. {:#n1} This <em>samādhi</em> is similar to [AN 1.11-15](https://www.suttacentral.net/an1.11-20){:target="_blank"}, but in AN it has been divided into five *sutta*s, one for each hindrance. It may be that EĀ 9.9-10 and AN 1.11-20 are later divisions of an older <em>samādhi</em> in the same way that EĀ 9.7-8 and AN 1.1-10 appear to divide a single <em>samādhi</em> like T792.\\
-In AN 1.11-20, each *sutta* identifies a particular reason (P. *nimitta*) for a hindrance to arise or cease. EĀ 9.9-10 instead address all five hindrances in the context of contemplating the impurities, suggesting that the specific context of the hindrances being impediments to <em>samādhi</em> has been lost in the AN parallels.\\
-EĀ 9.9-10 are not without their own loss, however. Each appears to have suffered a lacuna, or unfortunate abbreviation, that omitted the conclusion of the initial “one thing” statement. When we reach the end of these <em>samādhi</em>s, however, we find that the “one thing” appears to be distraction (亂想) and focused thought (專意), which generally agrees in meaning with “improper” (P. *ayoniso*) and “proper attention” (P. *yoniso manasi*) in the conclusions of AN 1.11-20. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is similar to <a href="https://www.suttacentral.net/an1.11-20" target="_blank">AN 1.11-15</a>, but in AN it has been divided into five <em>sutta</em>s, one for each hindrance. It may be that EĀ 9.9-10 and AN 1.11-20 are later divisions of an older <em>sūtra</em> in the same way that EĀ 9.7-8 and AN 1.1-10 appear to divide a single <em>sūtra</em> like T792.<br/>
+In AN 1.11-20, each <em>sutta</em> identifies a particular reason (P. <em>nimitta</em>) for a hindrance to arise or cease. EĀ 9.9-10 instead address all five hindrances in the context of contemplating the impurities, suggesting that the specific context of the hindrances being impediments to <em>samādhi</em> has been lost in the AN parallels.<br/>
+EĀ 9.9-10 are not without their own loss, however. Each appears to have suffered a lacuna, or unfortunate abbreviation, that omitted the conclusion of the initial “one thing” statement. When we reach the end of these <em>sūtra</em>s, however, we find that the “one thing” appears to be distraction (亂想) and focused thought (專意), which generally agrees in meaning with “improper” (P. <em>ayoniso</em>) and “proper attention” (P. <em>yoniso manasi</em>) in the conclusions of AN 1.11-20. [\[back\]](#ref1)
 2. {:#n2} *becomes distracted*. C. 作亂想. Lit. “make distracting perceptions” or “ideas.” The expression functions the same as English “to become distracted.” Technically, it means straying from the perceptions that are the subjects of the contemplation of impurity. In those moments of distraction, the five hindrances can arise or become stronger like a hunter catching his prey unaware, as the old Buddhist metaphor goes. This would appear to be a preparation for *dhyāna* meditation since the goal is to suppress the five hindrances. [\[back\]](#ref2)
 
 ---
