--- a/01_agama/ekottarika/09/EA_09_10.md
+++ b/01_agama/ekottarika/09/EA_09_10.md
@@ -37,8 +37,8 @@ Two on notions of desire are last.
 
 ### Notes
 
-1. {:#n1} This <em>samādhi</em> is similar to [AN 1.16-20](https://www.suttacentral.net/an1.11-20){:target="_blank"}. Most of the observations made in the notes to [EĀ 9.9](EA_09_09.html#n1){:target="_blank"} apply equally to this <em>samādhi</em>. [\[back\]](#ref1)
-2. {:#n2} As with EĀ 9.9, this statement is left incomplete, but the one thing is most likely “focused thinking” in this case, as evidenced by the conclusion of the <em>samādhi</em>. [\[back\]](#ref2)
+1. {:#n1} This <em>sūtra</em> is similar to [AN 1.16-20](https://www.suttacentral.net/an1.11-20){:target="_blank"}. Most of the observations made in the notes to [EĀ 9.9](EA_09_09.html#n1){:target="_blank"} apply equally to this <em>sūtra</em>. [\[back\]](#ref1)
+2. {:#n2} As with EĀ 9.9, this statement is left incomplete, but the one thing is most likely “focused thinking” in this case, as evidenced by the conclusion of the <em>sūtra</em>. [\[back\]](#ref2)
 
 ---
 
