--- a/01_agama/ekottarika/10/EA_10_06.md
+++ b/01_agama/ekottarika/10/EA_10_06.md
@@ -52,7 +52,7 @@ Therefore, obtain these fortunes.”
 
 ### Notes
 
-1. {:#n1} This <em>samādhi</em> is similar to [Iti 26](https://suttacentral.net/iti26){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is similar to [Iti 26](https://suttacentral.net/iti26){:target="_blank"}. [\[back\]](#ref1)
 
 ---
 
