--- a/01_agama/ekottarika/10/EA_10_01.md
+++ b/01_agama/ekottarika/10/EA_10_01.md
@@ -44,8 +44,8 @@ While the prideful do die.
 
 ### Notes
 
-1. {:#n1} This <em>samādhi</em> and the next are similar to [Iti 23](https://www.suttacentral.net/iti23), but the Pali *sutta* includes less context. [\[back\]](#ref1)
-2. {:#n2} *cultivate one thing … realm of Nirvāṇa*. This passage is nearly verbatim the passage found in the introductions of [EĀ 2.1-10](../02/EA_02_01.html){:target="_blank"}. The main variation is that “dispel their confused ideas” (去衆亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of Nirvāṇa” has become the “realm of Nirvāṇa” (S. *nirvāṇadhātu*). The former is repeated in the next <em>samādhi</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [\[back\]](#ref2)
+1. {:#n1} This <em>sūtra</em> and the next are similar to [Iti 23](https://www.suttacentral.net/iti23), but the Pali *sutta* includes less context. [\[back\]](#ref1)
+2. {:#n2} *cultivate one thing … realm of Nirvāṇa*. This passage is nearly verbatim the passage found in the introductions of [EĀ 2.1-10](../02/EA_02_01.html){:target="_blank"}. The main variation is that “dispel their confused ideas” (去衆亂想) has been replaced with “pacify their conditioned thinking” (諸行寂靜), and the “abode of Nirvāṇa” has become the “realm of Nirvāṇa” (S. *nirvāṇadhātu*). The former is repeated in the next <em>sūtra</em>, but the latter appears spurious. I’ve translated 諸行 with the prior passage in mind as “conditioned thinking” since it seems to be a synomym of “confused ideas” (亂想). Another possibility is that it refers to modes of conduct (e.g., mental, verbal, and physical). [\[back\]](#ref2)
 
 ---
 
