--- a/01_agama/ekottarika/10/EA_10_07.md
+++ b/01_agama/ekottarika/10/EA_10_07.md
@@ -51,7 +51,7 @@ And afterward there’s no more sorrow.
 
 ### Notes
 
-1. {:#n1} This <em>samādhi</em> is very similar to [Iti 22](https://suttacentral.net/iti22){:target="_blank"} and <a href="https://suttacentral.net/an7.62" target="_blank">AN 7.62</a>. [\[back\]](#ref1)
+1. {:#n1} This <em>sūtra</em> is very similar to [Iti 22](https://suttacentral.net/iti22){:target="_blank"} and <a href="https://suttacentral.net/an7.62" target="_blank">AN 7.62</a>. [\[back\]](#ref1)
 
 ---
 
