--- a/01_agama/samyukta/03/SA3_5.md
+++ b/01_agama/samyukta/03/SA3_5.md
@@ -60,7 +60,7 @@ next: SA3_6.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">This is <em>sūtra</em> no. 287 in the <cite>Taisho</cite> edition and no. 468 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0080b24" target="_blank">T99.2.80b24-81a8</a>). It’s parallel with <a href="https://suttacentral.net/sn12.65" target="_blank">SN 12.65</a>, <a href="https://suttacentral.net/ea38.4" target="_blank">EĀ 38.4</a>, and a Sanskrit fragment (<a href="https://suttacentral.net/sf154" target="_blank">SF154</a>). SN 12.65 differs from this <em>sūtra</em> in that it presents the long dependent origination chain that ends with name and form. EĀ 38.4 is nearly identical with this text, The Sanskrit version, on the other hand, is nearly identical to SN 12.65. [<a href="#ref1">back</a>]</li>
+<li id="n1">This is <em>sūtra</em> no. 287 in the <cite>Taisho</cite> edition and no. 468 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0080b24" target="_blank">T99.2.80b24-81a8</a>). It’s parallel with <a href="https://suttacentral.net/sn12.65" target="_blank">SN 12.65</a>, <a href="https://suttacentral.net/ea38.4" target="_blank">EĀ 38.4</a>, and a Sanskrit fragment (<a href="https://suttacentral.net/sf154" target="_blank">SF154</a>). There is also a late Song era C. translation, <a href="https://cbetaonline.dila.edu.tw/zh/T16n0715_f001" target="_blank">T715</a>. SN 12.65 differs from this <em>sūtra</em> in that it presents the long dependent origination chain that ends with name and form. EĀ 38.4 is nearly identical with this text, The Sanskrit version, on the other hand, is nearly identical to SN 12.65. [<a href="#ref1">back</a>]</li>
 <li id="n2"><em>action</em>. C. 行, P. <em>saṅkhāra</em>, S. <em>saṁskāra</em>. Typically, this item in the chain of dependent origination is translated as volition, mental formations, or choices. This is largely because the item is interpreted as intention in the Theravāda tradition. However, this item included all three types of action in other Abhidharma traditions. That is to say, this item represented all the <em>karma</em> of past lives which caused the continuation of awareness into this life. This is true of the <cite>Śāriputra Abhidharma</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T28n1548_p0606b29" target="_blank">T1548.28.606b29-7a25</a>) of the Dharmaguptakas and the <cite>Abhidharma Dharmakāya</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T26n1537_p0506a14" target="_blank">T1537.26.506a14-c29</a>) of the Sarvāstivādins. I’ve therefore translated this item as “action” in this context. This interpretation was probably why <em>saṁskāra</em> was translated as 行 in C., which means simply “action” or “conduct.” [<a href="#ref2">back</a>]</li></ol>
 
 <hr/>
