Fixed broken links in EA

--- a/01_agama/ekottarika/24/EA_24_06.md
+++ b/01_agama/ekottarika/24/EA_24_06.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Numerical Discourses | 24. The Tall Flag | 6. The Three Fasting Days'
 type: kramdown
 base: ../../../
-previous: EA_24_5.html
-next: ../../../01_agama/ekottarika/27/EA_27_06.html
+previous: EA_24_05.html
+next: ../27/EA_27_06.html
 ---
 
 # [The Numerical Discourses](../../index.html)
