--- a/01_agama/samyukta/01/SA1_31.md
+++ b/01_agama/samyukta/01/SA1_31.md
@@ -19,7 +19,7 @@ next: SA1_32.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5b29'>時，有異比丘來詣佛所。 為佛作禮，却住一面。 白佛言： 「如世尊說『多聞』，云何為多聞？」</td>
-    <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “As the Bhagavān says ‘well versed,’ how is one well versed?”</td>
+    <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “The Bhagavān says ‘well versed.’ How is one well versed?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c2'>佛告比丘： 「善哉，善哉！汝今問我多聞義耶？」</td>
