--- a/01_agama/samyukta/01/SA1_32.md
+++ b/01_agama/samyukta/01/SA1_32.md
@@ -19,7 +19,7 @@ next: SA1_33.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c10'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊所說『法師』，云何名為法師？」</td>
-    <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “As the Bhagavān says ‘Dharma teacher,’ what is a Dharma teacher?”</td>
+    <td id='p2'>2. It was then that a certain monk came to visit the Buddha. He bowed to the Buddha and withdrew to stand at one side. He said to the Buddha, “The Bhagavān says ‘Dharma teacher.’ What is a Dharma teacher?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c12'>佛告比丘： 「善哉，善哉！汝今欲知如來所說法師義耶？」</td>
