--- a/01_agama/samyukta/01/SA1_33.md
+++ b/01_agama/samyukta/01/SA1_33.md
@@ -19,7 +19,7 @@ next: SA1_34.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c21'>爾時，有異比丘來詣佛所。 頭面作禮，却住一面。 白佛言： 「如世尊說『法次法向』，云何法次法向？」</td>
-    <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head and withdrew to stand at one side. He then said to the Buddha, “As the Bhagavān says ‘going from one principle to the next,’ what is going from one principle to the next?”<sup id="ref2"><a href="#n2">2</a></sup></td>
+    <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head and withdrew to stand at one side. He then said to the Buddha, “The Bhagavān says ‘going from one principle to the next.’ How does one go from one principle to the next?”<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5c23'>佛告比丘： 「善哉，善哉！汝今欲知法次法向耶？」</td>
