--- a/01_agama/samyukta/01/SA1_35.md
+++ b/01_agama/samyukta/01/SA1_35.md
@@ -19,7 +19,7 @@ next: SA1_36.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a13'>爾時，有異比丘名三蜜離提，來詣佛所。 頭面禮足，却住一面。 白佛言： 「如世尊說『說法師』，云何名為說法師？」</td>
-    <td id='p2'>2. There was then a certain monk named Samṛddhi who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “As the Bhagavān says ‘the teaching of a Dharma teacher,’ what’s called the teaching of a Dharma teacher?”</td>
+    <td id='p2'>2. There was then a certain monk named Samṛddhi who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “The Bhagavān says ‘the teaching of a Dharma teacher.’ What’s called the teaching of a Dharma teacher?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a15'>佛告比丘： 「汝今欲知說法師義耶？」</td>
