--- a/01_agama/samyukta/01/SA1_34.md
+++ b/01_agama/samyukta/01/SA1_34.md
@@ -19,7 +19,7 @@ next: SA1_35.html
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a1'>爾時，有異比丘來詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，如世尊所說『得見法涅槃』，云何比丘得見法涅槃？」</td>
-    <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. He then said to the Buddha, “Bhagavān, as the Bhagavān says ‘attain <em>nirvāṇa</em> in the present life,’ how does a monk attain <em>nirvāṇa</em> in the present life?”</td>
+    <td id='p2'>2. There was then a certain monk who came to visit the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand at one side. He then said to the Buddha, “Bhagavān, the Bhagavān says ‘attain <em>nirvāṇa</em> in the present life.’ How does a monk attain <em>nirvāṇa</em> in the present life?”</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a3'>佛告比丘： 「善哉，善哉！汝今欲知見法涅槃耶？」</td>
